<?xml version="1.0" encoding="utf-8"?>

<!--
author: p.schwake
edited: 2016-10-21 psc
file: view_camera_and_title.xml
about: see title
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="4dp">

        <ImageView
            android:id="@+id/trip_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            />

        <ImageButton
            android:id="@+id/trip_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/trip_title_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/trip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/trip_title_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/trip_destination_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/trip_destination_hint"
            />

    </LinearLayout>



</LinearLayout>